// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a basic table 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="min-width: 0;"
        >
          <span>
            ID
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy ID"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="min-width: 0;"
        >
          <span>
            Name
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Name"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="min-width: 0;"
        >
          <span>
            Last Updated
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Last Updated"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <th
          role="cell"
          scope="row"
        >
          1
        </th>
        <td
          role="cell"
        >
          Banana
        </td>
        <td
          role="cell"
        >
          2021-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <th
          role="cell"
          scope="row"
        >
          2
        </th>
        <td
          role="cell"
        >
          Chocolate
        </td>
        <td
          role="cell"
        >
          2020-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <th
          role="cell"
          scope="row"
        >
          3
        </th>
        <td
          role="cell"
        >
          Vanilla
        </td>
        <td
          role="cell"
        >
          2019-11-11
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="grid-row font-sans-sm"
  >
    <div
      class="grid-col-3 text-left text-base text-italic"
    >
      Showing 1-3 of 3
    </div>
    <div
      class="grid-col-6 text-center"
    >
      <button
        class="margin-right-1"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-left fa-w-14 "
          data-icon="angle-double-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="margin-right-2"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-left fa-w-8 "
          data-icon="angle-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <span
        class="margin-right-2px"
      >
        Page 
      </span>
      <span
        class="margin-right-1"
      >
        <input
          class="margin-right-2px"
          pattern="\\\\d*"
          style="width: 33px;"
          type="text"
          value="1"
        />
         of 1 
      </span>
      <button
        class="usa-button usa-button--unstyled margin-right-2 text-base-darker hover:text-base-darkest active:text-base-darkest"
        type="button"
      >
        Go
      </button>
      <button
        class="margin-right-1"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-right fa-w-8 "
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-right fa-w-14 "
          data-icon="angle-double-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid-col-3 text-right"
    >
      <select>
        <option
          value="5"
        >
          Show 5
        </option>
        <option
          value="10"
        >
          Show 10
        </option>
        <option
          value="20"
        >
          Show 20
        </option>
        <option
          value="25"
        >
          Show 25
        </option>
        <option
          value="50"
        >
          Show 50
        </option>
        <option
          value="100"
        >
          Show 100
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`renders a basic table without pagination 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="min-width: 0;"
        >
          <span>
            ID
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy ID"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="min-width: 0;"
        >
          <span>
            Name
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Name"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="min-width: 0;"
        >
          <span>
            Last Updated
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Last Updated"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <th
          role="cell"
          scope="row"
        >
          1
        </th>
        <td
          role="cell"
        >
          Banana
        </td>
        <td
          role="cell"
        >
          2021-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <th
          role="cell"
          scope="row"
        >
          2
        </th>
        <td
          role="cell"
        >
          Chocolate
        </td>
        <td
          role="cell"
        >
          2020-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <th
          role="cell"
          scope="row"
        >
          3
        </th>
        <td
          role="cell"
        >
          Vanilla
        </td>
        <td
          role="cell"
        >
          2019-11-11
        </td>
      </tr>
    </tbody>
  </table>
  
</div>
`;

exports[`sorting buttons are clickable 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            <input
              style="cursor: pointer;"
              title="Toggle All Rows Selected"
              type="checkbox"
            />
          </span>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            ID
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy ID"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            Name
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Name"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            Last Updated
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Last Updated"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-darkest"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <input
            style="cursor: pointer;"
            title="Vanilla"
            type="checkbox"
          />
        </td>
        <td
          role="cell"
        >
          3
        </td>
        <td
          role="cell"
        >
          Vanilla
        </td>
        <td
          role="cell"
        >
          2019-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <input
            style="cursor: pointer;"
            title="Chocolate"
            type="checkbox"
          />
        </td>
        <td
          role="cell"
        >
          2
        </td>
        <td
          role="cell"
        >
          Chocolate
        </td>
        <td
          role="cell"
        >
          2020-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <input
            style="cursor: pointer;"
            title="Banana"
            type="checkbox"
          />
        </td>
        <td
          role="cell"
        >
          1
        </td>
        <td
          role="cell"
        >
          Banana
        </td>
        <td
          role="cell"
        >
          2021-11-11
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="grid-row font-sans-sm"
  >
    <div
      class="grid-col-3 text-left text-base text-italic"
    >
      Showing 1-3 of 3
    </div>
    <div
      class="grid-col-6 text-center"
    >
      <button
        class="margin-right-1"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-left fa-w-14 "
          data-icon="angle-double-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="margin-right-2"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-left fa-w-8 "
          data-icon="angle-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <span
        class="margin-right-2px"
      >
        Page 
      </span>
      <span
        class="margin-right-1"
      >
        <input
          class="margin-right-2px"
          pattern="\\\\d*"
          style="width: 33px;"
          type="text"
          value="1"
        />
         of 1 
      </span>
      <button
        class="usa-button usa-button--unstyled margin-right-2 text-base-darker hover:text-base-darkest active:text-base-darkest"
        type="button"
      >
        Go
      </button>
      <button
        class="margin-right-1"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-right fa-w-8 "
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-right fa-w-14 "
          data-icon="angle-double-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid-col-3 text-right"
    >
      <select>
        <option
          value="5"
        >
          Show 5
        </option>
        <option
          value="10"
        >
          Show 10
        </option>
        <option
          value="20"
        >
          Show 20
        </option>
        <option
          value="25"
        >
          Show 25
        </option>
        <option
          value="50"
        >
          Show 50
        </option>
        <option
          value="100"
        >
          Show 100
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`sorting buttons are clickable 2`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            <input
              style="cursor: pointer;"
              title="Toggle All Rows Selected"
              type="checkbox"
            />
          </span>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            ID
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy ID"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            Name
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Name"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-up fa-w-14 hover:text-base text-base-lighter"
              data-icon="chevron-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          colspan="1"
          role="columnheader"
          scope="col"
          style="padding: 0.5rem 1rem;"
        >
          <span>
            Last Updated
          </span>
          <button
            class="margin-left-1 usa-button usa-button--unstyled"
            style="cursor: pointer;"
            title="Toggle SortBy Last Updated"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 hover:text-base text-base-darkest"
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <input
            style="cursor: pointer;"
            title="Banana"
            type="checkbox"
          />
        </td>
        <td
          role="cell"
        >
          1
        </td>
        <td
          role="cell"
        >
          Banana
        </td>
        <td
          role="cell"
        >
          2021-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <input
            style="cursor: pointer;"
            title="Chocolate"
            type="checkbox"
          />
        </td>
        <td
          role="cell"
        >
          2
        </td>
        <td
          role="cell"
        >
          Chocolate
        </td>
        <td
          role="cell"
        >
          2020-11-11
        </td>
      </tr>
      <tr
        role="row"
      >
        <td
          role="cell"
        >
          <input
            style="cursor: pointer;"
            title="Vanilla"
            type="checkbox"
          />
        </td>
        <td
          role="cell"
        >
          3
        </td>
        <td
          role="cell"
        >
          Vanilla
        </td>
        <td
          role="cell"
        >
          2019-11-11
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="grid-row font-sans-sm"
  >
    <div
      class="grid-col-3 text-left text-base text-italic"
    >
      Showing 1-3 of 3
    </div>
    <div
      class="grid-col-6 text-center"
    >
      <button
        class="margin-right-1"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-left fa-w-14 "
          data-icon="angle-double-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        class="margin-right-2"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-left fa-w-8 "
          data-icon="angle-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <span
        class="margin-right-2px"
      >
        Page 
      </span>
      <span
        class="margin-right-1"
      >
        <input
          class="margin-right-2px"
          pattern="\\\\d*"
          style="width: 33px;"
          type="text"
          value="1"
        />
         of 1 
      </span>
      <button
        class="usa-button usa-button--unstyled margin-right-2 text-base-darker hover:text-base-darkest active:text-base-darkest"
        type="button"
      >
        Go
      </button>
      <button
        class="margin-right-1"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-right fa-w-8 "
          data-icon="angle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-right fa-w-14 "
          data-icon="angle-double-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid-col-3 text-right"
    >
      <select>
        <option
          value="5"
        >
          Show 5
        </option>
        <option
          value="10"
        >
          Show 10
        </option>
        <option
          value="20"
        >
          Show 20
        </option>
        <option
          value="25"
        >
          Show 25
        </option>
        <option
          value="50"
        >
          Show 50
        </option>
        <option
          value="100"
        >
          Show 100
        </option>
      </select>
    </div>
  </div>
</div>
`;
